--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -1,37 +1,2 @@
-<%= form_with(model: record) do |form| %>
-  <% if record.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(record.errors.count, "error") %> prohibited this record from being saved:</h2>
 
-      <ul>
-        <% record.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :station_id %>
-    <%= form.text_field :station_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :parameter_id %>
-    <%= form.text_field :parameter_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :time %>
-    <%= form.datetime_select :time %>
-  </div>
-
-  <div class="field">
-    <%= form.label :value %>
-    <%= form.text_field :value %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+<%= form.select :user_id, User.pluck(:email, :id), {include_blank: true}, {data: { controller: 'slim', slim_target: 'field' } } %>
