--- a/app/views/parameters/index.html.erb
+++ b/app/views/parameters/index.html.erb
@@ -29,3 +29,17 @@
 <br>
 
 <%= link_to 'New Parameter', new_parameter_path %>
+<%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
+
+<h1>S&P500</h1>
+
+<%= area_chart @stocks.group_by_year(:open).count %>
+
+<ul>
+  <% @stocks.each do |stock| %>
+    <li>
+      <%= stock.date.strftime('%d/%m/%y') %> |
+      <%= stock.open%>
+    </li>
+  <% end %>
+</ul>
