--- a/app/views/parameters/show.html.erb
+++ b/app/views/parameters/show.html.erb
@@ -1,19 +1,37 @@
-<p id="notice"><%= notice %></p>
+ <h1><%=  @parameter.name %></h1>
 
-<p>
-  <strong>Name:</strong>
-  <%= @parameter.name %>
-</p>
 
-<p>
-  <strong>Code:</strong>
-  <%= @parameter.code %>
-</p>
+ <form action="?" method="post">
+   <%= form_with do |form| %>
 
-<p>
-  <strong>Measuring unit:</strong>
-  <%= @parameter.measuring_unit %>
-</p>
+     <h3>Filter by observation station</h3>
+     <%= form.select "station", options_from_collection_for_select(Station.all, :id, :name), {},{ :multiple => true }%>
 
-<%= link_to 'Edit', edit_parameter_path(@parameter) %> |
-<%= link_to 'Back', parameters_path %>
+
+       <%= form.submit %>
+   <% end %>
+
+ <table>
+  <tr>
+    <td></td>
+    <% @months.each do |m| %>
+    <th scope="col"><%= m %></th>
+    <% end %>
+    <th scope="col">Average</th>
+    <th scope="col">Min</th>
+    <th scope="col">Max</th>
+
+  </tr>
+  <% @stations.each do |s| %>
+      <tr>
+    <th scope="row"><%= s.name %></th>
+        <% @months_n.each do |m| %>
+    <td> <%= s.get_values(m,params[:id],s.id) %> </td>
+        <% end %>
+        <td> <%= s.get_values_average_per_station(params[:id],s.id) %> </td>
+        <td> <%= s.get_value_min_per_station(params[:id],s.id) %> </td>
+        <td> <%= s.get_value_max_per_station(params[:id],s.id) %> </td>
+   <% end %>
+   </tr>
+
+</table>
