--- a/app/views/parameters/show.html.erb
+++ b/app/views/parameters/show.html.erb
@@ -1,37 +1,27 @@
+<%# <script src="the-downloaded-jquery-file.js">
+<script src="you-file.js"> %>
+ 
  <h1><%=  @parameter.name %></h1>
 
 
- <form action="?" method="post">
-   <%= form_with do |form| %>
+ <%= form_with url: url_for(:controller => "parameters", :action => "search"), method: :post, :remote => true,:format => :js, 
+ html: {} do |form|  %>
+
 
      <h3>Filter by observation station</h3>
-     <%= form.select "station", options_from_collection_for_select(Station.all, :id, :name), {},{ :multiple => true }%>
+     <%= form.select "station", options_from_collection_for_select(Station.all, :id, :name), {},  { :multiple => true }%>
 
-
-       <%= form.submit %>
+  <div class="btn"><%= form.submit %></div>
    <% end %>
 
- <table>
-  <tr>
-    <td></td>
-    <% @months.each do |m| %>
-    <th scope="col"><%= m %></th>
-    <% end %>
-    <th scope="col">Average</th>
-    <th scope="col">Min</th>
-    <th scope="col">Max</th>
+   <div id="data" class="data" > </div>
 
-  </tr>
-  <% @stations.each do |s| %>
-      <tr>
-    <th scope="row"><%= s.name %></th>
-        <% @months_n.each do |m| %>
-    <td> <%= s.get_values(m,params[:id],s.id) %> </td>
-        <% end %>
-        <td> <%= s.get_values_average_per_station(params[:id],s.id) %> </td>
-        <td> <%= s.get_value_min_per_station(params[:id],s.id) %> </td>
-        <td> <%= s.get_value_max_per_station(params[:id],s.id) %> </td>
-   <% end %>
-   </tr>
 
-</table>
+
+<div class="data">
+<%= render :partial => 'search' %>
+</div>
+
+
+
+
