--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Meteo</title>
+    <%# <title>Meteo</title> %>
+    <title><%= content_for?(:title) ? yield(:title) : "Meteo" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +12,13 @@
   </head>
 
   <body>
+
+  <%= render 'layouts/navigation' %>
+  <div class="container">
     <%= yield %>
+
+  </div>
   </body>
+
 </html>
+
