buttons added, charts added

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,5 +1,11 @@
-<h1>Welcome to Meteo</h1>
-<h3> This is a collection of meteorological data of Latvian whether observation stations. </h3>
+<h1>Welcome to Meteo - a collection of Latvian wheather station data</h1>
+<h2> Get started now!</h2><br>
+<%= link_to 'Overview', overview_path, class: 'button1' %>
+<%= link_to 'Parameters', parameters_path, class: 'button1' %>
+<%= link_to 'For Fun', fun_path, class: 'button1' %>
+
+
+
 
 
 
