--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -10,6 +10,25 @@ h1{
   font-family: 'Montserrat', sans-serif;
 }
 
+.button1 {
+  height: 600px;
+  width: 600px;
+  padding-top: 25px;
+  padding-bottom: 30px;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-size: 20px;
+  align-items: center;
+  font-weight: 500;
+  color: black;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  background: #aee3e3 ;
+  border: none;
+  border-radius: 25px;
+  border-collapse: collapse;
+  letter-spacing: 0.05em;
+}
+
 .content-table {
   background-color: #aee3e3;
   border-collapse: collapse;
