--- a/app/views/parameters/show.html.erb
+++ b/app/views/parameters/show.html.erb
@@ -3,26 +3,6 @@
      google.charts.load('current',{packages:['corechart']});
      google.charts.setOnLoadCallback(drawChart);
 
-     function myFunction() {
-         var input, filter, table, tr, th, i, txtValue;
-         input = document.getElementById("myInput");
-         filter = input.value.toUpperCase();
-         table = document.getElementById("myTable");
-         tr = table.getElementsByTagName("tr");
-
-         for (i = 1; i < tr.length; i++) {
-             th = tr[i].getElementsByTagName("th")[0];
-             if (th) {
-                 txtValue = th.textContent || th.innerText;
-                 if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                     tr[i].style.display = "";
-                 } else {
-                     tr[i].style.display = "none";
-                 }
-             }
-         }
-     }
-
      function drawChart() {
          // Create and populate the data table.
          var months =  <%= @months.to_json.html_safe %>;
@@ -45,6 +25,7 @@
 <h1><%=  @parameter.name + ", measured in "+ @parameter.measuring_unit%></h1>
 
 <%= link_to 'Back', parameters_path %>
+<%= link_to 'See data per station', parameter_show_path_path %>
 
 <div style="width:100%;overflow: hidden;">
 
@@ -56,37 +37,6 @@
     </div>
 </div>
 
-      <details>
-        <summary>
-          <h3 >See detailed data per station</h3>
-        </summary>
-        <input class="search"  type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for stations..">
-
-        <table class="content-table" id = "myTable">
-          <tr>
-            <td></td>
-            <% @months.each do |m| %>
-              <th scope="col"><%= m %></th>
-            <% end %>
-            <th scope="col">Average</th>
-            <th scope="col">Min</th>
-            <th scope="col">Max</th>
-
-          </tr>
-          <% @stations.each do |s| %>
-            <tr>
-              <th scope="row"><%= s.name %></th>
-              <% @months_n.each do |m| %>
-                <td> <%= s.get_values(m,params[:id],s.id) %> </td>
-              <% end %>
-              <td> <%= s.get_values_average_per_station(params[:id],s.id) %> </td>
-              <td> <%= s.get_value_min_per_station(params[:id],s.id) %> </td>
-              <td> <%= s.get_value_max_per_station(params[:id],s.id) %> </td>
-          <% end %>
-          </tr>
-
-        </table>
-      </details>
 
 
 
